--- a/PhillyCrime.ipynb
+++ b/PhillyCrime.ipynb
@@ -29,70 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>Finished parsing file /Users/shahab/Coursera/Coursera-Practical Machine Learning/Philadelphia_Crime_Rate_noNA.csv</pre>"
-      ],
-      "text/plain": [
-       "Finished parsing file /Users/shahab/Coursera/Coursera-Practical Machine Learning/Philadelphia_Crime_Rate_noNA.csv"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Parsing completed. Parsed 99 lines in 0.137403 secs.</pre>"
-      ],
-      "text/plain": [
-       "Parsing completed. Parsed 99 lines in 0.137403 secs."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Finished parsing file /Users/shahab/Coursera/Coursera-Practical Machine Learning/Philadelphia_Crime_Rate_noNA.csv</pre>"
-      ],
-      "text/plain": [
-       "Finished parsing file /Users/shahab/Coursera/Coursera-Practical Machine Learning/Philadelphia_Crime_Rate_noNA.csv"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Parsing completed. Parsed 99 lines in 0.012155 secs.</pre>"
-      ],
-      "text/plain": [
-       "Parsing completed. Parsed 99 lines in 0.012155 secs."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------------------------------\n",
-      "Inferred types from first line of file as \n",
-      "column_type_hints=[int,float,float,float,float,str,str]\n",
-      "If parsing fails due to incorrect types, you can correct\n",
-      "the inferred type list above and pass it to read_csv in\n",
-      "the column_type_hints argument\n",
-      "------------------------------------------------------\n"
+     "ename": "NameError",
+     "evalue": "name 'graphlab' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-39e306b0cc67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraphlab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Philadelphia_Crime_Rate_noNA.csv/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'graphlab' is not defined"
      ]
     }
    ],
@@ -882,21 +832,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
