--- a/assignment2/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/assignment2/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2016-05-03 18:08:45,683 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.9 started. Logging: /tmp/graphlab_server_1462291723.log\n"
+      "2016-05-04 18:36:59,044 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.9 started. Logging: /tmp/graphlab_server_1462379815.log\n"
      ]
     },
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -451,9 +451,9 @@
     "            # compute the derivative for weight[i]:\n",
     "            derivative = feature_derivative(errors, feature_matrix[:, i])\n",
     "            # add the squared value of the derivative to the gradient sum of squares (for assessing convergence)\n",
-    "            gradient_sum_squares = derivative ** derivative\n",
+    "            gradient_sum_squares = gradient_sum_squares + derivative * derivative\n",
     "            # subtract the step size times the derivative from the current weight\n",
-    "            \n",
+    "            weights[i] = weights[i] - step_size * derivative\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient matnigude:\n",
     "        gradient_magnitude = sqrt(gradient_sum_squares)\n",
     "        if gradient_magnitude < tolerance:\n",
@@ -486,9 +486,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -528,12 +528,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-46999.88716555    281.91211912]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = regression_gradient_descent(simple_feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print weights"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -553,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -571,12 +582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "preds = predict_output (test_simple_feature_matrix, weights)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -587,12 +600,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "356134.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print round(preds[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -603,12 +626,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.75400047593e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "RSS_Test = (test_output - preds) * (test_output - preds)\n",
+    "RSS_Test = RSS_Test.sum()\n",
+    "print RSS_Test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -626,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -649,12 +684,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -9.99999688e+04   2.45072603e+02   6.52795277e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights2 = regression_gradient_descent(feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print weights2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -665,12 +711,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(test_feature_matrix, test_output)=get_numpy_data(test_data, model_features, my_output)\n",
+    "preds2 = predict_output (test_feature_matrix, weights2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -681,12 +730,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "366651.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print round(preds2[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -697,12 +756,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "310000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print test_output[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -720,12 +789,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4229\n",
+      "4229\n"
+     ]
+    }
+   ],
+   "source": [
+    "print preds2.size\n",
+    "print test_output.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.70263446465e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "RSS_Test_2 = (preds2 - test_output) * (preds2 - test_output)\n",
+    "RSS_Test_2 = RSS_Test_2.sum()\n",
+    "print RSS_Test_2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -741,7 +843,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "2"
+   ]
   }
  ],
  "metadata": {
@@ -760,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
